feat: Add Homenet - Internal Network Monitoring (v1.3.0)
- Add built-in Python speedtest server (port 5201) for LAN testing
- Add device scanner with ARP cache and ping sweep discovery
- Add device management: track, name, organize network devices
- Add LAN/WiFi device performance charts
- Add Bufferbloat analysis chart (Idle vs Loaded vs Gateway Ping)
- Add auto-registration of devices running speedtests
- Add device details modal with measurement history
- Add gateway ping and local latency monitoring
- Add tab-based navigation (Internet/Homenet views)
- Add server status indicator with auto-start on launch
- Add SSE streaming for real-time speedtest progress
- Add continuous ping measurement during speedtest
- Add is_local flag to identify NetWatch host device
- Add separate internal_metrics.db for homenet data
- Update README with Homenet documentation
- Add CHANGELOG.md

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,32 @@
 
 
-#Ignore insiders AI rules
-.github\instructions\codacy.instructions.md
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+.venv/
+venv/
+ENV/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Data (user-specific)
+data/*.db
+data/*.csv
+logs/*.log
+
+# Binaries (downloaded at runtime)
+bin/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Ignore insiders AI rules
+.github/instructions/codacy.instructions.md
